# device-monitor

./: .gitignore  Cargo.toml  README.md  rumqttd.toml
.github/: CODEOWNERS
.github/workflows/: pr-check.yml  release.yml
docs/: ui.md
sample/: edge_app.json  network_settings.json  system_settings.json  wireless_settings.json
src/: ai_model.rs  app.rs  azurite.rs  error.rs  main.rs  mqtt_ctrl.rs  ota.rs
src/app/ui/: mod.rs  ui_agent_state.rs  ui_ai_model.rs  ui_ai_model_config.rs  ui_companion_chip.rs  ui_config.rs  ui_config_user.rs  ui_deploy.rs  ui_deployment_status.rs  ui_device_capabilities.rs  ui_device_manifest.rs  ui_device_reserved.rs  ui_device_state.rs  ui_directcmd.rs  ui_edge_app.rs  ui_edge_app_passthrough.rs  ui_elog.rs  ui_evp_module.rs  ui_exit.rs  ui_foot.rs  ui_head.rs  ui_main.rs  ui_main_chip.rs  ui_module.rs  ui_network_settings.rs  ui_ota.rs  ui_ota_config.rs  ui_sensor_chip.rs  ui_system_settings.rs  ui_token_provider.rs  ui_token_provider_blobs.rs  ui_wireless_settings.rs
src/mqtt_ctrl/evp/: configure.rs  device_info.rs  edge_app.rs  edge_app_passthrough.rs  elog.rs  evp.pest  evp_state.rs  evp_sysinfo.rs  mod.rs  module.rs  rpc.rs
tools/device-monitor-docker/: Dockerfile  README.md  healthcheck.sh  start.sh
