[package]
name = "device-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9.0"
clap = { version = "4", features = ["derive"] }
error-stack = "0.5.0"
jlogger-tracing = "0.1.4"
json = "0.12.4"
regex = "1.11.1"
rumqttc = "0.24.0"
serde = "1.0.218"
serde_derive = "1.0.218"
serde_json = "1.0.139"
tokio = { version = "1", features = ["full"] }
