[package]
name = "device-monitor"
version = "0.1.4"
edition = "2024"


[dependencies]
azure_core = { version = "0.25.0", features = ["tokio"] }
azure_storage = "0.21.0"
azure_storage_blobs = "0.21.0"
base64 = "0.22.1"
bytes = { version = "1.10.1", features = ["serde"] }
chrono = "0.4.41"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
error-stack = "0.5.0"
futures = "0.3.31"
jlogger-tracing = "0.1.4"
json = "0.12.4"
jsonschema = "0.30.0"
pest = "2.8.0"
pest_derive = "2.8.0"
rand = "0.9.1"
ratatui = "0.29.0"
regex = "1.11.1"
rumqttc = "0.24.0"
serde = "1.0.218"
serde_derive = "1.0.218"
serde_json = "1.0.139"
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
url = "2.5.4"
uuid = { version = "1.16.0", features = ["v4", "serde", "fast-rng"] }

[dev-dependencies]
ctor = "0.4"
